--- a/07_proxylab/Makefile
+++ b/07_proxylab/Makefile
@@ -1,12 +1,12 @@
 #
-# Makefile for proxy lab. 
+# Makefile for proxy lab.
 #
 # You may modify is file any way you like (except for the handin
-# rule). Autolab will execute the command "make" on your specific 
+# rule). Autolab will execute the command "make" on your specific
 # Makefile to build your proxy from sources.
 #
 CC = gcc
-CFLAGS = -g -Wall
+CFLAGS = -g -Wall -rdynamic
 LDFLAGS = -lpthread
 
 all: proxy
@@ -17,7 +17,13 @@ csapp.o: csapp.c csapp.h
 proxy.o: proxy.c csapp.h
 	$(CC) $(CFLAGS) -c proxy.c
 
-proxy: proxy.o csapp.o
+cache.o: cache.c cache.h csapp.h
+	$(CC) $(CFLAGS) -c cache.c
+
+open_clientfd_r.o: open_clientfd_r.c csapp.h
+	$(CC) $(CFLAGS) -c open_clientfd_r.c
+
+proxy: proxy.o csapp.o cache.o open_clientfd_r.o
 
 # Creates a tarball in ../proxylab-handin.tar that you should then
 # hand in to Autolab. DO NOT MODIFY THIS!
